force-app/main/default/objects/Resource_Allocation__c/fields/Avg_Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>Avg_Weekly_Hours__c</fullName>
    <label>Avg Weekly Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>