force-app/main/default/objects/Resource_Allocation__c/fields/end_date__c.field-meta.xml
<CustomField>
    <fullName>end_date__c</fullName>
    <label>end date</label>
    <type>Date</type>
</CustomField>