force-app/main/default/objects/Resource_Allocation__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Resource Allocations</relationshipLabel>
    <relationshipName>Resource_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>